--- a/vue/demo/vue-start/package.json
+++ b/vue/demo/vue-start/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.2",
     "mongoose": "^4.9.7",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
