--- a/angular/demo/ionic-start/ionic2-app/package.json
+++ b/angular/demo/ionic-start/ionic2-app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myApp",
-  "version": "0.0.1",
+  "name": "ionic-app-base",
+  "version": "0.0.0",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-ionic-angular": "1.1.2",
     "typescript": "2.2.1"
-  },
-  "description": "An Ionic project"
+  }
 }
